y.output
   0  $accept : Program $end

   1  Program : Decls

   2  Decls : Decl
   3        | Decls Decl

   4  Decl : VariableDecl
   5       | FunctionDecl

   6  VariableDecl : Variable T_Semicolon

   7  Variable : Type Y_Identifier

   8  FunctionDecl : Type Y_Identifier T_LParen Formalsq T_RParen StmtBlock

   9  Formalsq :
  10           | Formals

  11  Formals : Variable
  12          | Formals T_Comma Variable

  13  StmtBlock : T_LBrace StmtVarsq Stmtsq T_RBrace

  14  StmtVarsq :
  15            | StmtVars

  16  StmtVars : VariableDecl
  17           | StmtVars VariableDecl

  18  Stmtsq :
  19         | Stmts

  20  Stmts : Stmt
  21        | Stmts Stmt

  22  Stmt : Exprq T_Semicolon

  23  Exprq :
  24        | Expr

  25  Expr : LValue Y_Assign Expr
  26       | Expr2

  27  Expr2 : Expr2 Y_Or Expr3
  28        | Expr3

  29  Expr3 : Expr3 Y_And Expr4
  30        | Expr4

  31  Expr4 : Expr4 Y_Equal Expr5
  32        | Expr4 Y_NotEqual Expr5
  33        | Expr5

  34  Expr5 : Expr5 Y_Less Expr6
  35        | Expr5 Y_LessEqual Expr6
  36        | Expr5 Y_Greater Expr6
  37        | Expr5 Y_GreaterEqual Expr6
  38        | Expr6

  39  Expr6 : Expr6 Y_Plus Expr7
  40        | Expr6 Y_Minus Expr7
  41        | Expr7

  42  Expr7 : Expr7 Y_Times Expr8
  43        | Expr7 Y_Div Expr8
  44        | Expr7 Y_Mod Expr8
  45        | Expr8

  46  Expr8 : Y_Not Expr9
  47        | Y_Minus Expr9
  48        | Expr9

  49  Expr9 : Constant
  50        | LValue
  51        | Y_This
  52        | Call
  53        | T_LParen Expr T_RParen
  54        | T_ReadInteger T_LParen T_RParen
  55        | T_ReadLine T_LParen T_RParen
  56        | T_New T_LParen Y_Identifier T_RParen
  57        | T_NewArray T_LParen Expr T_Comma NewArrayType T_RParen

  58  LValue : Y_Identifier
  59         | FieldAccess
  60         | ArrayRef

  61  FieldAccess : Expr9 T_Dot Y_Identifier

  62  ArrayRef : Expr9 T_LBracket Expr T_RBracket

  63  Call : Y_Identifier T_LParen Actualsq T_RParen
  64       | FieldAccess T_LParen Actualsq T_RParen

  65  Actualsq :
  66           | Actuals

  67  Actuals : Expr
  68          | Actuals T_Comma Expr

  69  Constant : Y_IntConstant
  70           | Y_DoubleConstant
  71           | Y_BoolConstant
  72           | Y_StringConstant

  73  NewArrayType : Type
  74               | Y_Identifier

  75  Type : Primtype
  76       | Usertype
  77       | Lsttype

  78  Primtype : Y_Int
  79           | Y_Double
  80           | Y_Bool
  81           | Y_String

  82  Usertype : Y_TypeIdentifier

  83  Lsttype : Type T_LBracket T_RBracket

  84  Y_IntConstant : T_IntConstant

  85  Y_DoubleConstant : T_DoubleConstant

  86  Y_BoolConstant : T_BoolConstant

  87  Y_StringConstant : T_StringConstant

  88  Y_Int : T_Int

  89  Y_Double : T_Double

  90  Y_Bool : T_Bool

  91  Y_String : T_String

  92  Y_TypeIdentifier : T_TypeIdentifier

  93  Y_Identifier : T_Identifier

  94  Y_This : T_This

  95  Y_Assign : T_Assign

  96  Y_Or : T_Or

  97  Y_Plus : T_Plus

  98  Y_Minus : T_Minus

  99  Y_Times : T_Times

 100  Y_Div : T_Div

 101  Y_Mod : T_Mod

 102  Y_Less : T_Less

 103  Y_LessEqual : T_LessEqual

 104  Y_Greater : T_Greater

 105  Y_GreaterEqual : T_GreaterEqual

 106  Y_Equal : T_Equal

 107  Y_NotEqual : T_NotEqual

 108  Y_And : T_And

 109  Y_Not : T_Not

state 0
	$accept : . Program $end  (0)

	T_Int  shift 1
	T_Double  shift 2
	T_Bool  shift 3
	T_String  shift 4
	T_TypeIdentifier  shift 5
	.  error

	Program  goto 6
	Decls  goto 7
	Decl  goto 8
	VariableDecl  goto 9
	FunctionDecl  goto 10
	Variable  goto 11
	Type  goto 12
	Primtype  goto 13
	Usertype  goto 14
	Lsttype  goto 15
	Y_Int  goto 16
	Y_Double  goto 17
	Y_Bool  goto 18
	Y_String  goto 19
	Y_TypeIdentifier  goto 20


state 1
	Y_Int : T_Int .  (88)

	.  reduce 88


state 2
	Y_Double : T_Double .  (89)

	.  reduce 89


state 3
	Y_Bool : T_Bool .  (90)

	.  reduce 90


state 4
	Y_String : T_String .  (91)

	.  reduce 91


state 5
	Y_TypeIdentifier : T_TypeIdentifier .  (92)

	.  reduce 92


state 6
	$accept : Program . $end  (0)

	$end  accept


state 7
	Program : Decls .  (1)
	Decls : Decls . Decl  (3)

	T_Int  shift 1
	T_Double  shift 2
	T_Bool  shift 3
	T_String  shift 4
	T_TypeIdentifier  shift 5
	$end  reduce 1

	Decl  goto 21
	VariableDecl  goto 9
	FunctionDecl  goto 10
	Variable  goto 11
	Type  goto 12
	Primtype  goto 13
	Usertype  goto 14
	Lsttype  goto 15
	Y_Int  goto 16
	Y_Double  goto 17
	Y_Bool  goto 18
	Y_String  goto 19
	Y_TypeIdentifier  goto 20


state 8
	Decls : Decl .  (2)

	.  reduce 2


state 9
	Decl : VariableDecl .  (4)

	.  reduce 4


state 10
	Decl : FunctionDecl .  (5)

	.  reduce 5


state 11
	VariableDecl : Variable . T_Semicolon  (6)

	T_Semicolon  shift 22
	.  error


state 12
	Variable : Type . Y_Identifier  (7)
	FunctionDecl : Type . Y_Identifier T_LParen Formalsq T_RParen StmtBlock  (8)
	Lsttype : Type . T_LBracket T_RBracket  (83)

	T_Identifier  shift 23
	T_LBracket  shift 24
	.  error

	Y_Identifier  goto 25


state 13
	Type : Primtype .  (75)

	.  reduce 75


state 14
	Type : Usertype .  (76)

	.  reduce 76


state 15
	Type : Lsttype .  (77)

	.  reduce 77


state 16
	Primtype : Y_Int .  (78)

	.  reduce 78


state 17
	Primtype : Y_Double .  (79)

	.  reduce 79


state 18
	Primtype : Y_Bool .  (80)

	.  reduce 80


state 19
	Primtype : Y_String .  (81)

	.  reduce 81


state 20
	Usertype : Y_TypeIdentifier .  (82)

	.  reduce 82


state 21
	Decls : Decls Decl .  (3)

	.  reduce 3


state 22
	VariableDecl : Variable T_Semicolon .  (6)

	.  reduce 6


state 23
	Y_Identifier : T_Identifier .  (93)

	.  reduce 93


state 24
	Lsttype : Type T_LBracket . T_RBracket  (83)

	T_RBracket  shift 26
	.  error


state 25
	Variable : Type Y_Identifier .  (7)
	FunctionDecl : Type Y_Identifier . T_LParen Formalsq T_RParen StmtBlock  (8)

	T_LParen  shift 27
	T_Semicolon  reduce 7


state 26
	Lsttype : Type T_LBracket T_RBracket .  (83)

	.  reduce 83


state 27
	FunctionDecl : Type Y_Identifier T_LParen . Formalsq T_RParen StmtBlock  (8)
	Formalsq : .  (9)

	T_Int  shift 1
	T_Double  shift 2
	T_Bool  shift 3
	T_String  shift 4
	T_TypeIdentifier  shift 5
	T_RParen  reduce 9

	Variable  goto 28
	Type  goto 29
	Formalsq  goto 30
	Formals  goto 31
	Primtype  goto 13
	Usertype  goto 14
	Lsttype  goto 15
	Y_Int  goto 16
	Y_Double  goto 17
	Y_Bool  goto 18
	Y_String  goto 19
	Y_TypeIdentifier  goto 20


state 28
	Formals : Variable .  (11)

	.  reduce 11


state 29
	Variable : Type . Y_Identifier  (7)
	Lsttype : Type . T_LBracket T_RBracket  (83)

	T_Identifier  shift 23
	T_LBracket  shift 24
	.  error

	Y_Identifier  goto 32


state 30
	FunctionDecl : Type Y_Identifier T_LParen Formalsq . T_RParen StmtBlock  (8)

	T_RParen  shift 33
	.  error


state 31
	Formalsq : Formals .  (10)
	Formals : Formals . T_Comma Variable  (12)

	T_Comma  shift 34
	T_RParen  reduce 10


state 32
	Variable : Type Y_Identifier .  (7)

	.  reduce 7


state 33
	FunctionDecl : Type Y_Identifier T_LParen Formalsq T_RParen . StmtBlock  (8)

	T_LBrace  shift 35
	.  error

	StmtBlock  goto 36


state 34
	Formals : Formals T_Comma . Variable  (12)

	T_Int  shift 1
	T_Double  shift 2
	T_Bool  shift 3
	T_String  shift 4
	T_TypeIdentifier  shift 5
	.  error

	Variable  goto 37
	Type  goto 29
	Primtype  goto 13
	Usertype  goto 14
	Lsttype  goto 15
	Y_Int  goto 16
	Y_Double  goto 17
	Y_Bool  goto 18
	Y_String  goto 19
	Y_TypeIdentifier  goto 20


state 35
	StmtBlock : T_LBrace . StmtVarsq Stmtsq T_RBrace  (13)
	StmtVarsq : .  (14)

	T_Int  shift 1
	T_Double  shift 2
	T_Bool  shift 3
	T_String  shift 4
	T_TypeIdentifier  shift 5
	T_This  reduce 14
	T_New  reduce 14
	T_NewArray  reduce 14
	T_ReadInteger  reduce 14
	T_ReadLine  reduce 14
	T_Identifier  reduce 14
	T_IntConstant  reduce 14
	T_BoolConstant  reduce 14
	T_DoubleConstant  reduce 14
	T_StringConstant  reduce 14
	T_Minus  reduce 14
	T_Not  reduce 14
	T_Semicolon  reduce 14
	T_LParen  reduce 14
	T_RBrace  reduce 14

	VariableDecl  goto 38
	Variable  goto 11
	Type  goto 29
	StmtVarsq  goto 39
	StmtVars  goto 40
	Primtype  goto 13
	Usertype  goto 14
	Lsttype  goto 15
	Y_Int  goto 16
	Y_Double  goto 17
	Y_Bool  goto 18
	Y_String  goto 19
	Y_TypeIdentifier  goto 20


state 36
	FunctionDecl : Type Y_Identifier T_LParen Formalsq T_RParen StmtBlock .  (8)

	.  reduce 8


state 37
	Formals : Formals T_Comma Variable .  (12)

	.  reduce 12


state 38
	StmtVars : VariableDecl .  (16)

	.  reduce 16


state 39
	StmtBlock : T_LBrace StmtVarsq . Stmtsq T_RBrace  (13)
	Stmtsq : .  (18)
	Exprq : .  (23)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	T_Semicolon  reduce 23
	T_RBrace  reduce 18

	Y_Identifier  goto 53
	Stmtsq  goto 54
	Stmts  goto 55
	Stmt  goto 56
	Exprq  goto 57
	Expr  goto 58
	LValue  goto 59
	Expr2  goto 60
	Expr3  goto 61
	Expr4  goto 62
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 40
	StmtVarsq : StmtVars .  (15)
	StmtVars : StmtVars . VariableDecl  (17)

	T_Int  shift 1
	T_Double  shift 2
	T_Bool  shift 3
	T_String  shift 4
	T_TypeIdentifier  shift 5
	T_This  reduce 15
	T_New  reduce 15
	T_NewArray  reduce 15
	T_ReadInteger  reduce 15
	T_ReadLine  reduce 15
	T_Identifier  reduce 15
	T_IntConstant  reduce 15
	T_BoolConstant  reduce 15
	T_DoubleConstant  reduce 15
	T_StringConstant  reduce 15
	T_Minus  reduce 15
	T_Not  reduce 15
	T_Semicolon  reduce 15
	T_LParen  reduce 15
	T_RBrace  reduce 15

	VariableDecl  goto 79
	Variable  goto 11
	Type  goto 29
	Primtype  goto 13
	Usertype  goto 14
	Lsttype  goto 15
	Y_Int  goto 16
	Y_Double  goto 17
	Y_Bool  goto 18
	Y_String  goto 19
	Y_TypeIdentifier  goto 20


state 41
	Y_This : T_This .  (94)

	.  reduce 94


state 42
	Expr9 : T_New . T_LParen Y_Identifier T_RParen  (56)

	T_LParen  shift 80
	.  error


state 43
	Expr9 : T_NewArray . T_LParen Expr T_Comma NewArrayType T_RParen  (57)

	T_LParen  shift 81
	.  error


state 44
	Expr9 : T_ReadInteger . T_LParen T_RParen  (54)

	T_LParen  shift 82
	.  error


state 45
	Expr9 : T_ReadLine . T_LParen T_RParen  (55)

	T_LParen  shift 83
	.  error


state 46
	Y_IntConstant : T_IntConstant .  (84)

	.  reduce 84


state 47
	Y_BoolConstant : T_BoolConstant .  (86)

	.  reduce 86


state 48
	Y_DoubleConstant : T_DoubleConstant .  (85)

	.  reduce 85


state 49
	Y_StringConstant : T_StringConstant .  (87)

	.  reduce 87


state 50
	Y_Minus : T_Minus .  (98)

	.  reduce 98


state 51
	Y_Not : T_Not .  (109)

	.  reduce 109


state 52
	Expr9 : T_LParen . Expr T_RParen  (53)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	.  error

	Y_Identifier  goto 53
	Expr  goto 84
	LValue  goto 59
	Expr2  goto 60
	Expr3  goto 61
	Expr4  goto 62
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 53
	LValue : Y_Identifier .  (58)
	Call : Y_Identifier . T_LParen Actualsq T_RParen  (63)

	T_LParen  shift 85
	T_Plus  reduce 58
	T_Minus  reduce 58
	T_Times  reduce 58
	T_Div  reduce 58
	T_Mod  reduce 58
	T_Less  reduce 58
	T_LessEqual  reduce 58
	T_Greater  reduce 58
	T_GreaterEqual  reduce 58
	T_Assign  reduce 58
	T_Equal  reduce 58
	T_NotEqual  reduce 58
	T_And  reduce 58
	T_Or  reduce 58
	T_Semicolon  reduce 58
	T_Comma  reduce 58
	T_Dot  reduce 58
	T_LBracket  reduce 58
	T_RBracket  reduce 58
	T_RParen  reduce 58


state 54
	StmtBlock : T_LBrace StmtVarsq Stmtsq . T_RBrace  (13)

	T_RBrace  shift 86
	.  error


state 55
	Stmtsq : Stmts .  (19)
	Stmts : Stmts . Stmt  (21)
	Exprq : .  (23)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	T_Semicolon  reduce 23
	T_RBrace  reduce 19

	Y_Identifier  goto 53
	Stmt  goto 87
	Exprq  goto 57
	Expr  goto 58
	LValue  goto 59
	Expr2  goto 60
	Expr3  goto 61
	Expr4  goto 62
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 56
	Stmts : Stmt .  (20)

	.  reduce 20


state 57
	Stmt : Exprq . T_Semicolon  (22)

	T_Semicolon  shift 88
	.  error


state 58
	Exprq : Expr .  (24)

	.  reduce 24


state 59
	Expr : LValue . Y_Assign Expr  (25)
	Expr9 : LValue .  (50)

	T_Assign  shift 89
	T_Plus  reduce 50
	T_Minus  reduce 50
	T_Times  reduce 50
	T_Div  reduce 50
	T_Mod  reduce 50
	T_Less  reduce 50
	T_LessEqual  reduce 50
	T_Greater  reduce 50
	T_GreaterEqual  reduce 50
	T_Equal  reduce 50
	T_NotEqual  reduce 50
	T_And  reduce 50
	T_Or  reduce 50
	T_Semicolon  reduce 50
	T_Comma  reduce 50
	T_Dot  reduce 50
	T_LBracket  reduce 50
	T_RBracket  reduce 50
	T_RParen  reduce 50

	Y_Assign  goto 90


state 60
	Expr : Expr2 .  (26)
	Expr2 : Expr2 . Y_Or Expr3  (27)

	T_Or  shift 91
	T_Semicolon  reduce 26
	T_Comma  reduce 26
	T_RBracket  reduce 26
	T_RParen  reduce 26

	Y_Or  goto 92


state 61
	Expr2 : Expr3 .  (28)
	Expr3 : Expr3 . Y_And Expr4  (29)

	T_And  shift 93
	T_Or  reduce 28
	T_Semicolon  reduce 28
	T_Comma  reduce 28
	T_RBracket  reduce 28
	T_RParen  reduce 28

	Y_And  goto 94


state 62
	Expr3 : Expr4 .  (30)
	Expr4 : Expr4 . Y_Equal Expr5  (31)
	Expr4 : Expr4 . Y_NotEqual Expr5  (32)

	T_Equal  shift 95
	T_NotEqual  shift 96
	T_And  reduce 30
	T_Or  reduce 30
	T_Semicolon  reduce 30
	T_Comma  reduce 30
	T_RBracket  reduce 30
	T_RParen  reduce 30

	Y_Equal  goto 97
	Y_NotEqual  goto 98


state 63
	Expr4 : Expr5 .  (33)
	Expr5 : Expr5 . Y_Less Expr6  (34)
	Expr5 : Expr5 . Y_LessEqual Expr6  (35)
	Expr5 : Expr5 . Y_Greater Expr6  (36)
	Expr5 : Expr5 . Y_GreaterEqual Expr6  (37)

	T_Less  shift 99
	T_LessEqual  shift 100
	T_Greater  shift 101
	T_GreaterEqual  shift 102
	T_Equal  reduce 33
	T_NotEqual  reduce 33
	T_And  reduce 33
	T_Or  reduce 33
	T_Semicolon  reduce 33
	T_Comma  reduce 33
	T_RBracket  reduce 33
	T_RParen  reduce 33

	Y_Less  goto 103
	Y_LessEqual  goto 104
	Y_Greater  goto 105
	Y_GreaterEqual  goto 106


state 64
	Expr5 : Expr6 .  (38)
	Expr6 : Expr6 . Y_Plus Expr7  (39)
	Expr6 : Expr6 . Y_Minus Expr7  (40)

	T_Plus  shift 107
	T_Minus  shift 50
	T_Less  reduce 38
	T_LessEqual  reduce 38
	T_Greater  reduce 38
	T_GreaterEqual  reduce 38
	T_Equal  reduce 38
	T_NotEqual  reduce 38
	T_And  reduce 38
	T_Or  reduce 38
	T_Semicolon  reduce 38
	T_Comma  reduce 38
	T_RBracket  reduce 38
	T_RParen  reduce 38

	Y_Plus  goto 108
	Y_Minus  goto 109


state 65
	Expr6 : Expr7 .  (41)
	Expr7 : Expr7 . Y_Times Expr8  (42)
	Expr7 : Expr7 . Y_Div Expr8  (43)
	Expr7 : Expr7 . Y_Mod Expr8  (44)

	T_Times  shift 110
	T_Div  shift 111
	T_Mod  shift 112
	T_Plus  reduce 41
	T_Minus  reduce 41
	T_Less  reduce 41
	T_LessEqual  reduce 41
	T_Greater  reduce 41
	T_GreaterEqual  reduce 41
	T_Equal  reduce 41
	T_NotEqual  reduce 41
	T_And  reduce 41
	T_Or  reduce 41
	T_Semicolon  reduce 41
	T_Comma  reduce 41
	T_RBracket  reduce 41
	T_RParen  reduce 41

	Y_Times  goto 113
	Y_Div  goto 114
	Y_Mod  goto 115


state 66
	Expr8 : Y_Minus . Expr9  (47)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_LParen  shift 52
	.  error

	Y_Identifier  goto 53
	LValue  goto 116
	Expr9  goto 117
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 67
	Expr7 : Expr8 .  (45)

	.  reduce 45


state 68
	Expr8 : Y_Not . Expr9  (46)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_LParen  shift 52
	.  error

	Y_Identifier  goto 53
	LValue  goto 116
	Expr9  goto 118
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 69
	Expr8 : Expr9 .  (48)
	FieldAccess : Expr9 . T_Dot Y_Identifier  (61)
	ArrayRef : Expr9 . T_LBracket Expr T_RBracket  (62)

	T_Dot  shift 119
	T_LBracket  shift 120
	T_Plus  reduce 48
	T_Minus  reduce 48
	T_Times  reduce 48
	T_Div  reduce 48
	T_Mod  reduce 48
	T_Less  reduce 48
	T_LessEqual  reduce 48
	T_Greater  reduce 48
	T_GreaterEqual  reduce 48
	T_Equal  reduce 48
	T_NotEqual  reduce 48
	T_And  reduce 48
	T_Or  reduce 48
	T_Semicolon  reduce 48
	T_Comma  reduce 48
	T_RBracket  reduce 48
	T_RParen  reduce 48


state 70
	Expr9 : Constant .  (49)

	.  reduce 49


state 71
	Expr9 : Y_This .  (51)

	.  reduce 51


state 72
	Expr9 : Call .  (52)

	.  reduce 52


state 73
	LValue : FieldAccess .  (59)
	Call : FieldAccess . T_LParen Actualsq T_RParen  (64)

	T_LParen  shift 121
	T_Plus  reduce 59
	T_Minus  reduce 59
	T_Times  reduce 59
	T_Div  reduce 59
	T_Mod  reduce 59
	T_Less  reduce 59
	T_LessEqual  reduce 59
	T_Greater  reduce 59
	T_GreaterEqual  reduce 59
	T_Assign  reduce 59
	T_Equal  reduce 59
	T_NotEqual  reduce 59
	T_And  reduce 59
	T_Or  reduce 59
	T_Semicolon  reduce 59
	T_Comma  reduce 59
	T_Dot  reduce 59
	T_LBracket  reduce 59
	T_RBracket  reduce 59
	T_RParen  reduce 59


state 74
	LValue : ArrayRef .  (60)

	.  reduce 60


state 75
	Constant : Y_IntConstant .  (69)

	.  reduce 69


state 76
	Constant : Y_DoubleConstant .  (70)

	.  reduce 70


state 77
	Constant : Y_BoolConstant .  (71)

	.  reduce 71


state 78
	Constant : Y_StringConstant .  (72)

	.  reduce 72


state 79
	StmtVars : StmtVars VariableDecl .  (17)

	.  reduce 17


state 80
	Expr9 : T_New T_LParen . Y_Identifier T_RParen  (56)

	T_Identifier  shift 23
	.  error

	Y_Identifier  goto 122


state 81
	Expr9 : T_NewArray T_LParen . Expr T_Comma NewArrayType T_RParen  (57)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	.  error

	Y_Identifier  goto 53
	Expr  goto 123
	LValue  goto 59
	Expr2  goto 60
	Expr3  goto 61
	Expr4  goto 62
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 82
	Expr9 : T_ReadInteger T_LParen . T_RParen  (54)

	T_RParen  shift 124
	.  error


state 83
	Expr9 : T_ReadLine T_LParen . T_RParen  (55)

	T_RParen  shift 125
	.  error


state 84
	Expr9 : T_LParen Expr . T_RParen  (53)

	T_RParen  shift 126
	.  error


state 85
	Call : Y_Identifier T_LParen . Actualsq T_RParen  (63)
	Actualsq : .  (65)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	T_RParen  reduce 65

	Y_Identifier  goto 53
	Expr  goto 127
	LValue  goto 59
	Expr2  goto 60
	Expr3  goto 61
	Expr4  goto 62
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Actualsq  goto 128
	Actuals  goto 129
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 86
	StmtBlock : T_LBrace StmtVarsq Stmtsq T_RBrace .  (13)

	.  reduce 13


state 87
	Stmts : Stmts Stmt .  (21)

	.  reduce 21


state 88
	Stmt : Exprq T_Semicolon .  (22)

	.  reduce 22


state 89
	Y_Assign : T_Assign .  (95)

	.  reduce 95


state 90
	Expr : LValue Y_Assign . Expr  (25)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	.  error

	Y_Identifier  goto 53
	Expr  goto 130
	LValue  goto 59
	Expr2  goto 60
	Expr3  goto 61
	Expr4  goto 62
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 91
	Y_Or : T_Or .  (96)

	.  reduce 96


state 92
	Expr2 : Expr2 Y_Or . Expr3  (27)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	.  error

	Y_Identifier  goto 53
	LValue  goto 116
	Expr3  goto 131
	Expr4  goto 62
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 93
	Y_And : T_And .  (108)

	.  reduce 108


state 94
	Expr3 : Expr3 Y_And . Expr4  (29)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	.  error

	Y_Identifier  goto 53
	LValue  goto 116
	Expr4  goto 132
	Expr5  goto 63
	Expr6  goto 64
	Expr7  goto 65
	Y_Minus  goto 66
	Expr8  goto 67
	Y_Not  goto 68
	Expr9  goto 69
	Constant  goto 70
	Y_This  goto 71
	Call  goto 72
	FieldAccess  goto 73
	ArrayRef  goto 74
	Y_IntConstant  goto 75
	Y_DoubleConstant  goto 76
	Y_BoolConstant  goto 77
	Y_StringConstant  goto 78


state 95
	Y_Equal : T_Equal .  (106)

	.  reduce 106


state 96
	Y_NotEqual : T_NotEqual .  (107)

	.  reduce 107


state 97
	Expr4 : Expr4 Y_Equal . Expr5  (31)

	T_This  shift 41
	T_New  shift 42
	T_NewArray  shift 43
	T_ReadInteger  shift 44
	T_ReadLine  shift 45
	T_Identifier  shift 23
	T_IntConstant  shift 46
	T_BoolConstant  shift 47
	T_DoubleConstant  shift 48
	T_StringConstant  shift 49
	T_Minus  shift 50
	T_Not  shift 51
	T_LParen  shift 52
	.  error
